ChangeLog
=========

0.9.9-8
-----------------
- gui:               - fixed link to installer log file in error dialogs (Ralf Habacker)


0.9.9-7
-----------------
- common:            - save log file from previous run to <logfile>.old(Ralf Habacker)

0.9.9-6
-----------------
- console-installer: - added remove package option (Ralf Habacker)
                     - added install from local package option (Ralf Habacker)
                     - fixed option collidate problem (Ralf Habacker)
                     - refactored options to be able to detect not supported option combinations
                     - crash fix when uninstalling package with console installer (Ralf Habacker)
- common:            - fixed 'No such slot' message in log file (Ralf Habacker)
                     - fixed 'Warning: QDir::mkpath: Empty or null file name(s)' message in log file (Ralf Habacker)
                     - refactored download dir handling; added non persistant mode (Ralf Habacker)
                     - use installed database for deinstalling packages - this avoids orphaned packages (Ralf Habacker)
                     - avoid warning caused by empty pathes (Ralf Habacker)
                     - fixed bug not been able to use sha1 hashes (Ralf Habacker)
- single-installer:  - initial implementation of a package sdk installer (Ralf Habacker)

0.9.9-5
-----------------
- single-installer:  - crash fix when using upper case package name (Ralf Habacker)
                     - extended start menu support by using the package 
                       name and version (Ralf Habacker)
- common:            - fixed bug not using Mozilla Firefox as install path default value
                       when running from the firefox download manager. 
					   In case the main installation dir could not be used, use all users 
					   profile directory as base for default install root (Ralf Habacker)

0.9.9-4
-----------------