@@ -28,6 +28,9 @@
 
 #ifdef Q_OS_WIN32
 #include <windows.h>
+#define EOL "\r\n"
+#else
+#define EOL "\n"
 #endif
 
 static int fileOffset = 0;
@@ -103,8 +106,8 @@ void myMessageOutput(QtMsgType type, const char *msg)
     }
     QString date = QDateTime::currentDateTime().toString("[yyyy-MM-dd hh:mm:ss] ");
     logData->append(QString("<p><font color=\"gray\">%1</font><font color=\"%2\">%3</font></p>").arg(date).arg(msgColor).arg(msg));
-    QString data = date + QLatin1String(msgtype) + msg + QLatin1String("\n");
-#if defined(Q_OS_WIN32) && defined(QT_DEBUG)
+    QString data = date + QLatin1String(msgtype) + msg + QLatin1String(EOL);
+#if defined(Q_WS_WIN) && defined(QT_DEBUG)
     OutputDebugString(data.toLocal8Bit().data());
 #endif
     if (logFile)
